<resources>
    <string name="app_name">Goku\'s  Food App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Enter Password</string>
    <string name="Username">Enter Username</string>
    <string name="Register">Register Yourself?</string>
    <string name="mobile_number_10_digits">Mobile Number(10 Digits)</string>
    <string name="don_t_have_an_account_n_register_yourself">Don\'t have an Account!\n\t\tRegister Yourself?</string>
    <string name="name">Name(Min.3 characters)</string>
    <string name="password_min_4_characters">Password(Min. 4 characters)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="email_address">Email Address</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favorite_restaurants">Favorite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log Out</string>
    <string name="gokul_praveen">Gokul Praveen</string>
    <string name="OpenDrawer">opendrawer</string>
    <string name="CloseDrawer">closedrawer</string>
    <string name="file1">file1</string>
    <string name="sort_by_cost_low_to_high">Sort by cost(low to high)</string>
    <string name="sort_by_cost_high_to_low">Sort by cost(high to low)</string>
    <string name="sort_by_rating">Sort by Rating</string>
    <string name="line">__________________________________________________________</string>
    <string name="remove">Remove</string>
    <string name="otp_4_characters">OTP(4 characters)</string>
    <string name="new_password_min_4_characters">New Password(Min. 4 characters)</string>
    <string name="confirmed_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and email below:</string>
    <string name="note_the_otp_email_would_be_sent_only_once_in_24_hours_hence_if_you_need_to_reset_the_password_multiple_times_within_24_hours_kindly_use_the_same_otp">***Note:The OTP email would be sent only once in 24 hours. Hence, if you need to reset the password multiple times within 24 hours kindly use the same OTP.***</string>
    <string name="choose_from_the_menu_listed_below">Choose from the menu listed below!</string>
    <string name="ordering_from_restaurant">Ordering From:Restaurant</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed</string>
    <string name="ok">OK</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below:</string>
</resources>