<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPassword"
    android:background="#b71c1c">



    <ImageView
        android:id="@+id/imglogin"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/foodapplogo"
        /> >

    <TextView
        android:id="@+id/txtnotice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imglogin"
        android:layout_marginTop="10dp"
        android:text="@string/enter_your_registered_mobile_number_and_email_below"
        android:textSize="17sp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:textColor="@color/White"/>

    <EditText
        android:id="@+id/etusername"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_below="@+id/txtnotice"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="phone"
        android:textColorHint="@color/Grey"
        android:background="@color/White"
        android:drawableStart="@drawable/mobilenumber"
        />

    <EditText
        android:id="@+id/etemail"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_below="@+id/etusername"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:background="@color/White"
        android:textColorHint="@color/Grey"
        android:drawableStart="@drawable/email"/>

    <Button
        android:id="@+id/btnnext"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etemail"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/next"
        android:textSize="23sp"
        android:textStyle="bold"
        android:background="#f50057" />


</RelativeLayout>