<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ResetPassword"
    android:background="#b71c1c">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#b71c1c">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/resettoolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:layout_scrollFlags="enterAlways"
                />

        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>



    <ImageView
        android:id="@+id/imglogin"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/foodapplogo"
        />
    <EditText
        android:id="@+id/etotp"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imglogin"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/otp_4_characters"
        android:inputType="number"
        android:textColorHint="@color/Grey"
        android:background="@color/White"
        android:drawableStart="@drawable/otp"
        />

    <EditText
        android:id="@+id/etnewpassword"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_below="@+id/etotp"
        android:layout_marginTop="30dp" android:layout_centerHorizontal="true"
        android:hint="@string/new_password_min_4_characters"
        android:inputType="textPassword"
        android:background="@color/White"
        android:textColorHint="@color/Grey"
        android:drawableStart="@drawable/password"/>

    <EditText
        android:id="@+id/etconfirmresetpassword"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_below="@+id/etnewpassword"
        android:layout_marginTop="30dp" android:layout_centerHorizontal="true"
        android:hint="@string/confirmed_password"
        android:inputType="textPassword"
        android:background="@color/White"
        android:textColorHint="@color/Grey"
        android:drawableStart="@drawable/password"/>

    <Button
        android:id="@+id/btnsubmit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etconfirmresetpassword"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/submit"
        android:textSize="23sp"
        android:textStyle="bold"
        android:background="#e91e63" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/note_the_otp_email_would_be_sent_only_once_in_24_hours_hence_if_you_need_to_reset_the_password_multiple_times_within_24_hours_kindly_use_the_same_otp"
        android:textStyle="bold"
        android:textColor="@color/White"/>

</RelativeLayout>