<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Login"
    android:background="#b71c1c">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#b71c1c">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:layout_scrollFlags="enterAlways"
           />

        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>



    <ImageView
        android:id="@+id/imglogin"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/foodapplogo"
        /> >
    <EditText
        android:id="@+id/etusername"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imglogin"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="phone"
        android:textColorHint="@color/Grey"
        android:background="@color/White"
        android:drawableStart="@drawable/mobilenumber"
        />

    <EditText
        android:id="@+id/etloginpassword"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_below="@+id/etusername"
        android:layout_marginTop="30dp" android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@color/White"
        android:textColorHint="@color/Grey"
        android:drawableStart="@drawable/password"/>

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etloginpassword"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="Login"
        android:textSize="23sp"
        android:textStyle="bold"
        android:background="#e91e63" />

    <TextView
        android:id="@+id/txtfgpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnlogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Forgot Password?"
        android:textStyle="bold"
        android:textColor="@color/White"/>


    <TextView
        android:id="@+id/txtregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtfgpassword"
        android:layout_marginTop="190dp"
        android:layout_centerHorizontal="true"
        android:text="@string/don_t_have_an_account_n_register_yourself"
        android:textStyle="bold"
        android:textColor="@color/White"/>

</RelativeLayout>